src/components/Painel.css
.painel {
  width: 100%;
  min-height: 72px;
  padding: 8px;
  background-color: #efefef;
  border-radius: 8px 8px 0 0;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  flex-direction: column;
  font-weight: bold;
}

.painel .operation {
  font-size: 1.2rem;
  color: #1f2937;
}

.painel .result {
  font-size: 1.5rem;
  color: #111827;
}

